load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# keep
go_binary(
    name = "tf_provider",
    embed = [":terraform-provider-constellation_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "terraform-provider-constellation_lib",
    srcs = ["main.go"],
    importpath = "github.com/edgelesssys/constellation/v2/terraform-provider-constellation",
    visibility = ["//visibility:private"],
    deps = [
        "//terraform-provider-constellation/internal/provider",
        "@com_github_hashicorp_terraform_plugin_framework//providerserver",
    ],
)

copy_file(
    name = "terraform_rc",
    src = "config.tfrc.tpl",
    out = "config.tfrc",
    allow_symlink = True,
    visibility = ["//visibility:public"],
)
